--- a/templates/faq.html
+++ b/templates/faq.html
@@ -39,6 +39,7 @@
           <i class="fa fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
+						<!-- NAV BUTTON LIST -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link" href="/">HOME </a>
@@ -47,14 +48,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
-		<li class="nav-item">
+							
+							<li class="nav-item">
                 <a class="nav-link" href="/login">ACCOUNT</a>
-		</li>				
+							</li>		
+							
 							<li class="nav-item">
                 <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
-							
-              
 							
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
@@ -64,49 +65,50 @@
                 <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
+						<!-- END OF NAV BUTTON LIST -->
           </div>
         </nav>
       </div>
 			<!-- END OF NAVIGATION BAR -->
 			
+			
+			
 			<!-- PAGE CONTENT -->
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="bottom-border">
-					<div>
+				<div class="border-solid">
 						<h1>Welcome! Have some questions?</h1>
-							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
-					</div>
+							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
 				</div>
 				<!-- END OF PAGE HEADER -->
 
         <!-- PAGE BODY -->
 				<div>
-					<h2>Do I have to create an account?</h2>
-						<p class="small-text"> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
+					<h>Do I have to create an account?</h2>
+						<p class="small-text">No, you do not need to create an account to be able to use the app. The app is free to use to any who wishes to find the perfect recipe. However, you will need to make an account if you want to save any of the recipes that you have found. The account's purpose is only so that the recipes can be saved. You can also make your own recipes to add to your saved recipes.</p>
 
 					<h2>Can I save my favorite recipes?</h2>
-						<p class="small-text"> Yes, if you want to save your favorite recipes you need to create an account.</p>
+						<p class="small-text">Yes, you can save your favorite recipes, but you will need to create an account to do so.</p>
 
 					<h2>How can I save a recipe? </h2>
-						<p class="small-text">Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+						<p class="small-text">Simply click on the save button of the specified recipe you wish to save. Then, the next time you log in you will be able to access all the recipes.</p>
 
 					<h2> Can I add my own recipes? </h2>
-						<p class="small-text"> Yes, only users who have an account can add their own recipes. </p>
+						<p class="small-text"> Yes, you can add your own recipes to your account. However, only users who have an account can add their own recipes. </p>
 
 					<h2> Can I organize my saved recipes by category? </h2>
-						<p class="small-text"> No, all your saved recipes will displayed in a single list </p>
+						<p class="small-text"> No, you can't organize your recipes by category. All the saved recipes for your account will be displayed in a single list.</p>
 
-					<h2> Can I search recipes by name? (ex: lasagna, chicken, ) </h2>
-						<p class="small-text"> Yes, if you choose to search by name you will get multiple results that match your request.</p>
+					<h2> Can I search recipes by name? (ex: lasagna, chicken) </h2>
+						<p class="small-text"> Yes, you can search recipes by the recipe title. If you choose to search by name you will get multiple results with different variations that match your search request.</p>
         </div>
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
 				<div class="top-border">
 					<!--"FOOTER" CONTENT-->
-					<div class="font-black">
+					<div class="font-black centered">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
