--- a/templates/faq.html
+++ b/templates/faq.html
@@ -77,7 +77,7 @@
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="border-solid">
+				<div class="border-solid pheader">
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
 				</div>
@@ -85,7 +85,7 @@
 
         <!-- PAGE BODY -->
 				<div>
-					<h>Do I have to create an account?</h2>
+					<h2>Do I have to create an account?</h2>
 						<p class="small-text">No, you do not need to create an account to be able to use the app. The app is free to use to any who wishes to find the perfect recipe. However, you will need to make an account if you want to save any of the recipes that you have found. The account's purpose is only so that the recipes can be saved. You can also make your own recipes to add to your saved recipes.</p>
 
 					<h2>Can I save my favorite recipes?</h2>
@@ -102,13 +102,13 @@
 
 					<h2> Can I search recipes by name? (ex: lasagna, chicken) </h2>
 						<p class="small-text"> Yes, you can search recipes by the recipe title. If you choose to search by name you will get multiple results with different variations that match your search request.</p>
-        </div>
+        </div><br><br>
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
 				<div class="top-border">
 					<!--"FOOTER" CONTENT-->
-					<div class="font-black centered">
+					<div class="font-black">
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
