--- a/templates/faq.html
+++ b/templates/faq.html
@@ -84,7 +84,7 @@
 				<!-- END OF PAGE HEADER -->
 
         <!-- PAGE BODY -->
-				<div>
+				<div style='width: 75%; margin-left:50px;'>
 					<h2>Do I have to create an account?</h2>
 						<p class="small-text">No, you do not need to create an account to be able to use the app. The app is free to use to any who wishes to find the perfect recipe. However, you will need to make an account if you want to save any of the recipes that you have found. The account's purpose is only so that the recipes can be saved. You can also make your own recipes to add to your saved recipes.</p>
 
