--- a/templates/faq.html
+++ b/templates/faq.html
@@ -77,14 +77,14 @@
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="border-solid" style='width: 25%; margin-left:50px;'>
+				<div class="border-solid" style='width: 25%; margin-left:50px; background: url(img/bread-color-copyspace-1565982.jpg); background-size:cover; height: 50vh;'>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
 				</div>
 				<!-- END OF PAGE HEADER -->
 
         <!-- PAGE BODY -->
-				<div style='width: 75%; margin-left:50px;'>
+				<div style='width: 75%; margin-left: 75px;'>
 					<h2>Do I have to create an account?</h2>
 						<p class="small-text">No, you do not need to create an account to be able to use the app. The app is free to use to any who wishes to find the perfect recipe. However, you will need to make an account if you want to save any of the recipes that you have found. The account's purpose is only so that the recipes can be saved. You can also make your own recipes to add to your saved recipes.</p>
 
