--- a/templates/faq.html
+++ b/templates/faq.html
@@ -77,7 +77,7 @@
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="border-solid" style='width: 25%; margin-left:50px; background: url(img/bread-color-copyspace-1565982.jpg); background-size:cover; height: 50vh;'>
+				<div class="border-solid" style='width: 25%; margin-left:50px; border-bottom: 5px solid black;'>
 						<h1>Welcome! Have some questions?</h1>
 							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
 				</div>
