--- a/templates/faq.html
+++ b/templates/faq.html
@@ -77,9 +77,11 @@
       <div class="container">
 				
 				<!--PAGE HEADER-->
-				<div class="border-solid" style='width: 25%; margin-left:50px; border-bottom: 5px solid black;'>
-						<h1>Welcome! Have some questions?</h1>
-							<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
+				<div style='border-bottom: 5px solid black;'>
+					<div style='width: 25%; margin-left:50px;'>
+							<h1>Welcome! Have some questions?</h1>
+								<p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p><br>
+					</div>
 				</div>
 				<!-- END OF PAGE HEADER -->
 
