--- a/templates/faq.html
+++ b/templates/faq.html
@@ -108,7 +108,7 @@
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
-				<div class="top-border">
+				<div class="top-border" style='border-top: 5px solid black;'>
 					<!--"FOOTER" CONTENT-->
 					<div class="font-black">
 						<h1 class="underline bold">Contact us:</h1>
