--- a/templates/faq.html
+++ b/templates/faq.html
@@ -108,9 +108,9 @@
 				<!-- END OF PAGE BODY -->
 
 				<!--"FOOTER"-->
-				<div style='margin-left:50px; border-top: 5px solid black;'>
+				<div style='border-top: 5px solid black;'>
 					<!--"FOOTER" CONTENT-->
-					<div class="font-black">
+					<div class="font-black" style='margin-left:50px;'>
 						<h1 class="underline bold">Contact us:</h1>
 						<ul>
 							<li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
