--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,7 +63,7 @@
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
         <ul style="list-style: none;">
-          <li><img src="img/IMG_3546.JPG" style='width: 25%; height: auto;'><b>Athena Enosara:</b> <i class="fa fa-envelope"></i> aenosara@csumb.edu</li>
+          <li><img src="img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> <i class="fa fa-envelope"></i> aenosara@csumb.edu</li>
           <li><b>Andrew Marmolejo:</b> <i class="fa fa-envelope"></i> amarmolejo@csumb.edu</li>
           <li><b>Guadalupe Cisneros:</b> <i class="fa fa-envelope"></i> gcisneros@csumb.edu</li>
           <li><b>Magnus Harboe:</b> <i class="fa fa-envelope"></i> mharboe@csumb.edu</li>
