--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,12 +62,10 @@
       </div>
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
-        <ul style="list-style: none;">
-          <li><img src="img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> <i class="fa fa-envelope"></i> aenosara@csumb.edu</li>
-          <li><b>Andrew Marmolejo:</b> <i class="fa fa-envelope"></i> amarmolejo@csumb.edu</li>
-          <li><b>Guadalupe Cisneros:</b> <i class="fa fa-envelope"></i> gcisneros@csumb.edu</li>
-          <li><b>Magnus Harboe:</b> <i class="fa fa-envelope"></i> mharboe@csumb.edu</li>
-        </ul>
+					<p><img src="img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
+         	<p><img src="img/Andrew.jpg"><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</p>
+					<p><img src="img/Lupe.png"><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</p>
+					<p><img src="img/Magnus.jpg"><b>Magnus Harboe:</b> mharboe@csumb.edu</p>
       </div>
     </section>
   </body>
