--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,7 +62,7 @@
       </div>
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
-					<p><img src="img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
+					<p><img src="../static/css/img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
          	<p><img src="img/Andrew.jpg"><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</p>
 					<p><img src="img/Lupe.png"><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</p>
 					<p><img src="img/Magnus.jpg"><b>Magnus Harboe:</b> mharboe@csumb.edu</p>
