--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,10 +62,10 @@
       </div>
       <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
-					<p><img src="../static/css/img/Athena.jpg" style='width: 25%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
-         	<p><img src="img/Andrew.jpg"><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</p>
-					<p><img src="img/Lupe.png"><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</p>
-					<p><img src="img/Magnus.jpg"><b>Magnus Harboe:</b> mharboe@csumb.edu</p>
+					<p><img src="../static/css/img/Athena.jpg" style='width: 15%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
+         	<p><img src="../static/css/img/Andrew.jpg" style='width: 15%; height: auto;'><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</p>
+					<p><img src="../static/css/img/Lupe.png" style='width: 15%; height: auto;'><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</p>
+					<p><img src="../static/css/img/Magnus.jpg" style='width: 15%; height: auto;'><b>Magnus Harboe:</b> mharboe@csumb.edu</p>
       </div>
     </section>
   </body>
