--- a/templates/contact.html
+++ b/templates/contact.html
@@ -60,13 +60,21 @@
           </div>
         </nav>
       </div>
-      <div class="container welcome">
+      <div class="container">
+				<div style='bottom-margin: 10%;'>
         <h1 class= "underline bold">Contact us:</h1>
-					<p><img src="../static/css/img/Athena.jpg" style='width: 5%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu</p>
-         	<p><img src="../static/css/img/Andrew.jpg" style='width: 5%; height: auto;'><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</p>
-					<p><img src="../static/css/img/Lupe.png" style='width: 5%; height: auto;'><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</p>
-					<p><img src="../static/css/img/Magnus.jpg" style='width: 5%; height: auto;'><b>Magnus Harboe:</b> mharboe@csumb.edu</p>
-      </div>
+					<p><img src="../static/css/img/Athena.jpg" style='width: 5%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu<br>
+					Communication Deign Major with a conentration in Web Design<br>
+					Computer Science Minor</p>
+         	<p><img src="../static/css/img/Andrew.jpg" style='width: 5%; height: auto;'><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu<br>
+					Major</p>
+					<p><img src="../static/css/img/Lupe.png" style='width: 5%; height: auto;'><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu<br>
+					Major</p>
+					<p><img src="../static/css/img/Magnus.jpg" style='width: 5%; height: auto;'><b>Magnus Harboe:</b> mharboe@csumb.edu<br>
+					Major</p>
+      
+				</div>
+			</div>
     </section>
   </body>
 </html>
