--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
         </nav>
       </div>
       <div class="container">
-				<div style='bottom-margin: 10%;'>
+				<div style='bottom-margin: 10%; top-margin: 5%; left-margin: 25%;'>
         <h1 class= "underline bold">Contact us:</h1>
 					<p><img src="../static/css/img/Athena.jpg" style='width: 5%; height: auto;'><b>Athena Enosara:</b> aenosara@csumb.edu<br>
 					Communication Deign Major with a conentration in Web Design<br>
