--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,25 +61,24 @@
         </nav>
       </div>
       <div class="container">
-				<div style='bottom-margin: 10%; top-margin: 5%; left-margin: 25%;'>
-        <h1 class= "underline bold">Contact us:</h1>
-					<p><img src="../static/css/img/Athena.jpg" style='width: 8%; height: auto;'><br>
-					<b>Athena Enosara:</b> aenosara@csumb.edu<br>
-					Communication Deign Major with a conentration in Web Design<br>
-					Computer Science Minor</p>
-					
-         	<p><img src="../static/css/img/Andrew.jpg" style='width: 8%; height: auto;'><br>
-					<b>Andrew Marmolejo:</b> amarmolejo@csumb.edu<br>
-					Major</p>
-					
-					<p><img src="../static/css/img/Lupe.png" style='width: 8%; height: auto;'><br>
-					<b>Guadalupe Cisneros:</b> gcisneros@csumb.edu<br>
-					Major</p>
-					
-					<p><img src="../static/css/img/Magnus.jpg" style='width: 8%; height: auto;'><br>
-					<b>Magnus Harboe:</b> mharboe@csumb.edu<br>
-					Major</p>
-      
+				<div style='bottom-margin: 10%; top-margin: 5%; left-margin: 25%; font-size: 30px;'>
+					<h1 class= "underline bold">Contact us:</h1>
+						<p><img src="../static/css/img/Athena.jpg" style='width: 8%; height: auto;'><br>
+						<b>Athena Enosara:</b> aenosara@csumb.edu<br>
+						Communication Deign Major with a conentration in Web Design<br>
+						Computer Science Minor</p>
+
+						<p><img src="../static/css/img/Andrew.jpg" style='width: 8%; height: auto;'><br>
+						<b>Andrew Marmolejo:</b> amarmolejo@csumb.edu<br>
+						Major</p>
+
+						<p><img src="../static/css/img/Lupe.png" style='width: 8%; height: auto;'><br>
+						<b>Guadalupe Cisneros:</b> gcisneros@csumb.edu<br>
+						Major</p>
+
+						<p><img src="../static/css/img/Magnus.jpg" style='width: 8%; height: auto;'><br>
+						<b>Magnus Harboe:</b> mharboe@csumb.edu<br>
+						Major</p>
 				</div>
 			</div>
     </section>
