--- a/templates/contact.html
+++ b/templates/contact.html
@@ -74,7 +74,7 @@
 
 						<p><img src="../static/css/img/Lupe.png" style='width: 8%; height: auto;'><br>
 						<b>Guadalupe Cisneros:</b> gcisneros@csumb.edu<br>
-						Major</p>
+						Computer Science Major with a concentration in Software Engineering</p>
 
 						<p><img src="../static/css/img/Magnus.jpg" style='width: 8%; height: auto;'><br>
 						<b>Magnus Harboe:</b> mharboe@csumb.edu<br>
