--- a/templates/contact.html
+++ b/templates/contact.html
@@ -78,7 +78,7 @@
 
 						<p><img src="../static/css/img/Magnus.jpg" style='width: 8%; height: auto;'><br>
 						<b>Magnus Harboe:</b> mharboe@csumb.edu<br>
-						Major</p>
+						Business Administration Major</p>
 				</div>
 			</div>
     </section>
