--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
         </nav>
       </div>
       <div class="container">
-				<div style='bottom-margin: 10%; top-margin: 5%; left-margin: auto; right-margin: auto; font-size: 15px;'>
+				<div style='bottom-margin: 10%; top-margin: 5%; font-size: 15px;'>
 					<h1 class= "underline bold">Contact us:</h1>
 						<p><img src="../static/css/img/Athena.jpg" style='width: 8%; height: auto;'><br>
 						<b>Athena Enosara:</b> aenosara@csumb.edu<br>
